MavDemo1: Class.newInstance() was deprecated in Java 9